# TransactionsProcessor

./: .gitignore  Dockerfile  README.md  logging.conf  main.py  pyproject.toml
.github/workflows/: aws.yml
logs/: app.log.2024-04-09  app.log.2024-04-11
output/: result.xlsx
tests/: conftest.py
tests/data/banks/bank_feeds/: bank_feeds.csv
tests/data/banks/bhi/: bhi_bank_feed.xlsx
tests/data/banks/citadel/: Citadel Truist Feeds.xls  Citadel Valley Feeds.xls  Citadel Webster Feeds.csv
tests/data/banks/city_wide_bank/: city_wide_bank_feeds.xls
tests/e2e/: test_lambda.py
tests/excel_creator/: test_excel_creator.py
tests/file_conversion/: test_convert_scanned_pdf.py
tests/file_parsing/: test_find_correct_parser.py  test_parse_banks.py  test_parse_system.py
tests/integration/: test_excel_controller.py  test_excel_creator.py  test_reconcile_forbright.py
tests/integration/analysis_requests/: test_analysis_requests.py
tests/mocks/excel_creator/: mock_transactions_and_matches.py
tests/mocks/transaction_matcher/: mock_transactions.py  multi_mock_transactions.py
tests/output_tests_data/: transactions_output.xlsx
tests/transaction_matching/: test_matcher_utils.py  test_one_to_many_matching.py  test_one_to_one_matching.py  test_transaction_matcher.py
transactions_process_service/: main.py
transactions_process_service/api/: api.py  custom_exceptions.py  deps.py  transactions.py
transactions_process_service/config/: custom_log_handlers.py
transactions_process_service/schemas/: transaction.py
transactions_process_service/services/: email_sender.py  excel_creator.py  transaction_matcher.py
transactions_process_service/services/excel_creation/: excel_controller.py  excel_helper_functions.py  excel_matches_functions.py  excel_sorting.py
transactions_process_service/services/parsers/: file_parser.py  find_correct_parser.py  parser_exceptions.py  parsers_dict.py
transactions_processor/: main.py
transactions_processor/core/: config.py
transactions_processor/exceptions/: file_exceptions.py
transactions_processor/models/: transaction.py
transactions_processor/schemas/: analysis_request.py  transaction.py  transactions_matcher.py
transactions_processor/services/: analysis_requests_service.py  default_transactions_matcher.py  parallel_transactions_matcher.py  transaction_matcher.py  transactions_matcher.py
transactions_processor/services/converters/: scanned_pdf_converter.py
transactions_processor/services/excel/: excel_controller.py  excel_matches_functions.py  excel_sorting.py  excel_utils.py
transactions_processor/services/parsers/: csv_parser.py  pdf_parser.py  transactions_parser.py
transactions_processor/services/reconciliation/: transactions_matcher.py
transactions_processor/utils/: aws_utils.py  date_utils.py  excel_utils.py  math_utils.py
(+97 files in other folders)
