[tool.poetry]
name = "transactions_process_service"
version = "0.1.0"
description = ""
authors = ["Sharon Fabin <i.sharon.fabin@gmail.com>", "Ido Brosh <idobroshm@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "transactions_process_service.main:start"
# start = "python -m uvicorn --app-dir=buybox_service main:app --reload"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pytest = "^7.4.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.9"
numpy = "^1.26.4"
tabula-py = "^2.9.0"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
