[tool.poetry]
name = "transactions_process_service"
version = "0.1.0"
description = ""
authors = ["Sharon Fabin <i.sharon.fabin@gmail.com>", "Ido Brosh <idobroshm@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "main:start"
# start = "python -m uvicorn --app-dir=buybox_service main:app --reload"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pytest = "^7.4.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.9"
numpy = "^1.26.4"
tabula-py = "^2.9.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
python-dotenv = "^1.0.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "tests/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
